--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -2,7 +2,7 @@
   <h1 class="text-5xl font-extrabold text-blue-700 mb-4">First Angular App</h1>
   <p class="text-lg text-gray-600 mb-6">My name is Nicho</p>
 
-  <div class="bg-yellow-100 border-l-4 border-yellow-500 text-yellow-700 p-4" role="alert">
+  <div class="bg-blue-100 border-l-4 border-blue-500 text-blue-700 p-4" role="alert">
     <p>Nicholas Leonard Henanto</p>
   </div>
 </div>
